added auth implementations to frontend
